      from experimental.  Thanks to Dominic Hargreaves for the
      report and the patch.  (Closes: #637793)
  * checks/files:
    + [NT] Added exceptions to "extra-license-file" for manpages,
      static libraries, .pc-, elf and pyshared-data-files.  This
      covers all the false-positives currently found in the liblicense
      package.  (Closes: #617901)

  * collection/fields{,.desc}:
    + [NT] Removed, no longer used.

  * data/fields/archive-sections:
    + [NT] Fixed a typo in "otherosfs" section name.  Thanks to
      Stefan Potyra for the report.  (Closes: #637596)
  * data/spelling/corrections:
    + [NT] Added some corrections for "remove" etc.  Thanks to
      Jakub Wilk for spotting those.

  * debian/copyright:
    + [NT] Added Jakub Wilk to maintainers.
  * debian/rules:
    + [JW] Use LC_ALL rather than LANG, since LC_ALL overrules
      LANG.

  * doc/lintian.xml:
    + [NT] Removed duplicate "allowed to" in same sentence.
  * doc/README.developers:
    + [NT] New file.  Thanks to Jeremiah C. Foster for the initial
      contribution.

  * frontend/lintian:
    + [NT] Lintian now mentions if overrides may have been ignored.
      This happens if a package contains an override for a tag
      that has been marked "non-overridable" by the current vendor
      profile.

  * lib/Util.pm:
    + [JW] Use LC_ALL rather than LANG, since LC_ALL overrules
      LANG.
  * lib/Lintian/Collect/Source.pm:
    + [NT] Removed a requirement for fields that was not needed.
  * lib/Lintian/Collect/Package.pm:
    + [JW,NT] Replace use of fail with croak.  (Closes: #637741)
  * lib/Lintian/Profile.pm:
    + [NT] Reject profiles containing an unknown field.
  * lib/Lintian/Tags.pm:
    + [NT] Track which tags had overrides that have been dropped.

  * private/*:
    + [JW] Use LC_ALL rather than LANG, since LC_ALL overrules
      LANG.

  * reporting/harness:
    + [NT] Added missing import statement.

  * t/*: